# vivid

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: BasicPbr.frag  BlinnPhongColored.frag  BlinnPhongColored.vert  Color.frag  DepthShader.frag  DepthShader.vert  Fog.frag  Fog.vert  Passthrough.vert  Pbr.frag  Pbr.vert  PointCloud.frag  PointCloud.vert  ShadowMapping.frag  ShadowMapping.vert  SimpleColorShading.frag  SimpleColorShading.vert  SimpleShading.frag  SimpleShading.vert  SimpleTexture.frag  Transform.vert  TriangleScreenShader.frag  TriangleScreenShader.vert  WobbyTexture.frag
samples/: CMakeLists.txt
samples/basic/: BasicPbrDemo.cpp  BlinnPhongDemo.cpp  ColoredBlinnPhongDemo.cpp  CubeDemo.cpp  FogDemo.cpp  FrameBufferDemo.cpp  HelloGL.cpp  ImGuiDemo.cpp  LoadJsonDemo.cpp  PbrDemo.cpp  PointCloudDemo.cpp  PrimitivesDemo.cpp  ScreenShaderDemo.cpp  ShadowMapDemo.cpp  TinyViewerDemo.cpp
src/: CMakeLists.txt
src/vivid/: Application.cpp  Application.h  OrbitControls.cpp  OrbitControls.h  UIManager.cpp  UIManager.h  vivid.h
src/vivid/core/: Attribute.h  Camera.cpp  Camera.h  Geometry.cpp  Geometry.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Object3D.cpp  Object3D.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h
src/vivid/extras/: FrameBuffer.cpp  FrameBuffer.h  ImguiHelper.cpp  ImguiHelper.h  MaterialImpl.cpp  MaterialImpl.h  ShaderImpl.cpp  ShaderImpl.h  Shadow.cpp  Shadow.h  TinyViewer.cpp  TinyViewer.h
src/vivid/primitives/: AxesHelper.h  BoneGeometry.h  BoxGeometry.h  CylinderGeometry.h  GridHelper.h  PlaneGeometry.h  SphereGeometry.h
src/vivid/utils/: GlmUtils.cpp  GlmUtils.h  IOUtil.cpp  IOUtil.h
